# yasg2

./: Cargo.toml
resources/: bindings_config.ron
resources/sprites/: planet.ron  projectile.ron
src/: main.rs  state.rs
src/resources/: asset.rs  mod.rs
src/systems/: collision.rs  fire.rs  mod.rs  projectile.rs
