[package]
name = "yasg"
version = "0.1.0"
authors = ["Claes 'letharion' Gyllensvärd <letharion@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.13.2"
log = { version = "0.4.8", features = ["serde"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
